# FocusFlow

./: .gitignore  Dockerfile  README.md  architecture.md  build_cpp.bat  deployment_guide.md  file_manifest.md  requirements.txt  run.bat  setup.py
cpp_modules/: CMakeLists.txt  engagement.cpp
data/: .gitkeep
frontend/: index.html  script.js  style.css
src/: __init__.py  database.py  main.py  vision_engine.py
src/utils/: reset_db.py
